--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v2
       with:
           node-version: "v14.17.0"
-    - run: npm ci
+    - run: npm i
     - run: npm run build
     - name: Deploy
       uses: crazy-max/ghaction-github-pages@v1
