--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
       with:
         target_branch: gh-pages
         build_dir: build
+      env:
+        $GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
