--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         target_branch: gh-pages
         build_dir: build
       env:
-        $GITHUB_TOKEN: ${{ secrets.FTP_GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.FTP_GITHUB_TOKEN }}
     - name: Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
