--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smf",
-  "homepage": "http://smf.thesoftwarecompany.in",
+  "homepage": "http://thesoftwarecompany.in",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
