--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "datatables.net-dt": "^1.12.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.1",
     "mdb-react-ui-kit": "^5.0.0",
     "posts": "^0.0.1",
@@ -21,11 +22,10 @@
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
-    "font-awesome": "^4.7.0",
     "react-icons": "^4.6.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.4.0",
     "react-slick": "^0.29.0",
     "react-social-icons": "^5.15.0",
