--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "datatables.net-dt": "^1.12.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.1",
+    "js-cookie": "^3.0.1",
     "mdb-react-ui-kit": "^5.0.0",
     "posts": "^0.0.1",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-data-table-component": "^7.5.3",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-responsive-carousel": "^3.2.23",
