--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-select": "^5.4.0",
     "react-slick": "^0.29.0",
     "react-social-icons": "^5.15.0",
+    "react-spinners": "^0.13.8",
     "react-tabs": "^5.1.0",
     "sass": "^1.56.0",
     "slick-carousel": "^1.8.1",
